--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="col-sm-12 main">
                         <h1 id="buli大宝儿">Buli大宝儿</h1>
 
-<p>大宝儿, 我错了. 虽然这个图片和这个文字没有什么关系, 但是我还是想说: 大宝儿! 我错了!!!</p>
+<p>大宝儿, 我错了. 虽然这个图片和这个文字没有什么关系, 但是我还是想说: 大宝儿! 我错了!!! (图片有点大, 需要加载一会儿)</p>
 
 <p><img src="https://raw.githubusercontent.com/immustard/gallery/master/Europe-2019/20191024213306.jpeg" class="mt-4 rounded" /></p>
 
